--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
+
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+header {
+    text-align: center;
+
+nav {
+    display: flex;
+    gap: 10px;
+}
+}
+#featured-property {
+    max-width: 1000px;
+    text-align: center;
+    margin-top: 20px;
+}
+#details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    gap: 250px;
+    padding: 0 20px;
+}
+#details div {
+    justify-content: center;
+    text-align: center;
 }
