--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ header {
 nav {
     display: flex;
     gap: 10px;
+    padding: 10 10px;
+    
+    a{
+        background-color: grey;
+    }
 }
 }
 #featured-property {
@@ -23,13 +28,16 @@ nav {
 }
 #details {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: red;
-    gap: 250px;
+    gap: 200px;
     padding: 0 20px;
+    border-bottom: 1px solid #ff600f;
 }
 #details div {
     justify-content: center;
     text-align: center;
+    width: 25%;
+    padding: 20px;
 }
